get all routes working and update documentation
